[package]
name = "epub-dude"
version = "0.1.0"
authors = ["tommady <tommady@users.noreply.github.com>"]
readme = "README.md"
edition = "2024"

[dependencies]
anyhow = "1"
ureq = { version = "3", features = ["multipart"] }
html5ever = "0.39"
epub-builder = "0.8"
indicatif = "0.18"
http = "1"
getopts = "0.2"

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
panic = 'abort'
